-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.9
-
None
-
eafca2229b007f53685fabe9a6217f0eb4c8b67f
When native dialogs become visible, their invisible proxy Qt dialog
blocks input to Qt windows. It is intended for native dialogs which
can't block Qt windows themselves, e.g. on Android. But this behavior
is incompatible with native dialogs which are implemented as in-process
Qt windows (as in KDE), because the proxy dialog blocks them as well.
The attachment qtbug58116.zip contains a minimal implementation of QPlatformTheme
and a test application testdialog. Compile it with the development build of Qt, then run
testdialog. You won't be able to click "Close" button in the dialog.